# assignment1

./: README.md
dlib/image_processing/: shape_predictor.h  shape_predictor_abstract.h
dlib/image_transforms/: lbp.h
examples/: CMakeLists.txt  antispoof_face_lbf_svm.cpp  antispoof_face_lbf_svm_with_dpca.cpp  antispoof_face_lbf_svm_with_svd.cpp  face_landmark_detection_adaptive.cpp  face_landmark_detection_draw.cpp  face_landmark_detection_ex.cpp  face_landmark_detection_noline.cpp  main.cpp  swd_tools.cpp  train_shape_predictor_adaptive.cpp  webcam_face_pose_ex.cpp  webcam_face_pose_with_antispoof.cpp  webcam_face_pose_with_chip_detail.cpp  webcam_face_pose_with_pnp.cpp  xml_parser_mine.cpp
examples/faces/194/: 296814969_3_landmarks.xml  testing_with_face_landmarks.xml  training_with_face_landmarks.xml
python/: log.txt  output1.xml  output100.xml  output2.xml  output3.xml  output500.xml  py_gui_test.py  py_landmark_editor.py  py_landmark_editor_model.py  py_skimage_test.py  py_trans_pts2xml.py  testing_with_face_landmarks.xml
src/: face_landmark_detection_noline.cpp
